src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>CSC_PN__c</fullName>
        <label>Product Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Pending_Minutes__c</fullName>
        <formula>IF(AND(NOT(ISNULL(CSC_Start_Pending__c)),NOT(ISNULL(CSC_End_Pending__c))), 
Floor((CSC_End_Pending__c-CSC_Start_Pending__c)*24*60), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Previous_Owner_Manager__c</fullName>
        <label>Previous Owner Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Previous_Owner_WorkGroup__c</fullName>
        <label>Previous Owner WorkGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_Priority__c</fullName>
        <label>Priority_Not Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-Immediate</fullName>
                </value>
                <value>
                    <fullName>1-Critical-Down</fullName>
                </value>
                <value>
                    <fullName>2-Critical-Degraded</fullName>
                </value>
                <value>
                    <fullName>3-Normal</fullName>
                </value>
                <value>
                    <fullName>4-Low Priority</fullName>
                </value>
                <value>
                    <fullName>SW-0</fullName>
                </value>
                <value>
                    <fullName>SW-1</fullName>
                </value>
                <value>
                    <fullName>SW-2</fullName>
                </value>
                <value>
                    <fullName>SW-3</fullName>
                </value>
                <value>
                    <fullName>SW-4</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Priority Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Product_Line__c</fullName>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Quote_Request__c</fullName>
        <label>Quote Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blank</fullName>
                </value>
                <value>
                    <fullName>T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Fast Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Quote_Status__c</fullName>
        <label>Quote Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quotation request sent out</fullName>
                </value>
                <value>
                    <fullName>Quotation request received</fullName>
                </value>
                <value>
                    <fullName>Quotation created</fullName>
                </value>
                <value>
                    <fullName>Pending customer review</fullName>
                </value>
                <value>
                    <fullName>Quotation expired</fullName>
                </value>
                <value>
                    <fullName>Quotation accepted by customer</fullName>
                </value>
                <value>
                    <fullName>Quotation rejected / close order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_RPL_AntiFraud_check__c</fullName>
        <formula>AND(OR(ISBLANK( TEXT(CSC_RPL_Status__c)), ISNULL(TEXT(CSC_RPL_Status__c)),ISBLANK(TEXT(AntiFraud_Status__c)), ISNULL(TEXT(AntiFraud_Status__c))), TEXT(CSC_CaseOrQuickLog__c) ==&apos;Normal Case&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPL AntiFraud check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_RPL_Status__c</fullName>
        <label>RPL Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RPL Pass</fullName>
                </value>
                <value>
                    <fullName>RPL Failed</fullName>
                </value>
                <value>
                    <fullName>RPL confirming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Misroute</fullName>
                </value>
                <value>
                    <fullName>call disconnected</fullName>
                </value>
                <value>
                    <fullName>HW/SW inquiry</fullName>
                </value>
                <value>
                    <fullName>service inquiry for closed case</fullName>
                </value>
                <value>
                    <fullName>pre-sales inquiry</fullName>
                </value>
                <value>
                    <fullName>search wanranty or contract</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Repair_Class_Code__c</fullName>
        <label>Repair Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>Account Management Activities</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Report_Account_Address__c</fullName>
        <formula>Account.BillingStreet</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Account_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Account_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Account_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Account_Province__c</fullName>
        <formula>Account.BillingState</formula>
        <label>Account Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Actual_EO_Dispatch_Local_Time__c</fullName>
        <label>Actual EO Dispatch Local Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Actual_End_Of_DBD__c</fullName>
        <label>Actual End Of DBD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_CA_Assign_Time__c</fullName>
        <label>CA Assign Time</label>
        <summarizedField>Case_Owner__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Case_Owner__c.CSC_Report_Old_CaseOwner_Role__c</field>
            <operation>equals</operation>
            <value>Customer Access(L0)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Case_Owner__c.CSC_Report_New_CaseOwner_Role__c</field>
            <operation>notEqual</operation>
            <value>Customer Access(L0)</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Owner__c.Case__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSC_Report_CA_Handled__c</fullName>
        <label>CA Handled</label>
        <summarizedField>Case_Owner__c.CA_Handled_for_Rollup__c</summarizedField>
        <summaryForeignKey>Case_Owner__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSC_Report_CA_OwnerNum__c</fullName>
        <label>CA OwnerNum</label>
        <summarizedField>Case_Owner__c.CSC_Report_Weight__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Owner__c.CSC_Report_Old_CaseOwner_Role__c</field>
            <operation>equals</operation>
            <value>Customer Access(L0)</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Owner__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSC_Report_CA_Yank_Time__c</fullName>
        <label>CA Yank Time</label>
        <summarizedField>Case_Owner__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Case_Owner__c.CSC_Report_New_CaseOwner_Role__c</field>
            <operation>equals</operation>
            <value>Customer Access(L0)</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Owner__c.Case__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSC_Report_CA_case_owner__c</fullName>
        <label>CA case owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_CD_1B_Case_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CD 1B case(New)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_Report_CD_1V_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CD 1V case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_Report_CD_8_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CD 8 case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_Report_CPR_Sub_Cases_L2_To_L3__c</fullName>
        <label>CPR Sub Cases L2 To L3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_Age_Grouping__c</fullName>
        <formula>IF( CSC_Report_Outstanding_Period__c &lt;= 5, &quot;&lt;= 5 days&quot;, 
     IF(CSC_Report_Outstanding_Period__c &lt;= 14, &quot;5 - 14 days&quot;, 
         IF(CSC_Report_Outstanding_Period__c &lt;= 30, &quot;14 - 30 days&quot;, 
             IF(CSC_Report_Outstanding_Period__c &lt;= 60, &quot;30 - 60 days&quot;, 
                 IF(CSC_Report_Outstanding_Period__c &lt;= 90, &quot;60 - 90 days&quot;, 
                     IF(CSC_Report_Outstanding_Period__c &lt;= 180, &quot;90 - 180 days&quot;, 
                         IF(CSC_Report_Outstanding_Period__c &lt;= 365, &quot;180 days - 1 year&quot;, 
&quot; &gt; 1 year&quot;) ) ) ) ) ) )</formula>
        <label>Case Age Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_Contact_Phone2__c</fullName>
        <formula>CSC_Additional_Contact__r.Phone</formula>
        <label>Case Contact Phone2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_Create_Time_Type__c</fullName>
        <formula>IF( OR(MOD( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 7 ), 7 )= 1, 
MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 )= 2, 
MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 )= 3, 
MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 )= 4, 
MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 )= 5), 
IF( 
AND( VALUE(TEXT(value(MID(TEXT(CreatedDate),12,2))+8)+ 
IF(value(MID(TEXT(CreatedDate),15,2))&lt;10, 
&quot;0&quot; + TEXT(value(MID(TEXT(CreatedDate),15,2))), 
TEXT(value(MID(TEXT(CreatedDate),15,2)))) )&gt;830, 
VALUE(TEXT(value(MID(TEXT(CreatedDate),12,2))+8)+ 
IF(value(MID(TEXT(CreatedDate),15,2))&lt;10, 
&quot;0&quot; + TEXT(value(MID(TEXT(CreatedDate),15,2))), 
TEXT(value(MID(TEXT(CreatedDate),15,2)))) )&lt;1800), 
&quot;CN OH Cases &quot;, 
&quot;CN AOH Cases &quot;), 
&quot;CN AOH Cases &quot;)</formula>
        <label>Case Create Time Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_ETE_TAT__c</fullName>
        <formula>IF(TEXT(Delivery_Alternative__c) = &quot;600&quot;, 
CSC_Report_ETE_End_Date_to_Open_Date_1__c, 
IF( ISBLANK(Hw_Turn_Around_Time__c) , CSC_Report_ETE_End_Date_to_Open_Date_1__c, 
Hw_Turn_Around_Time__c /60/60))</formula>
        <label>Case ETE TAT</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_OTC_Type__c</fullName>
        <formula>IF(OR( MID( TEXT(CSC_OTC__c) , 0, 3)=&apos;00C&apos; ,
MID( TEXT(CSC_OTC__c) , 0, 3)=&apos;00W&apos;,
MID( TEXT(CSC_OTC__c) , 0, 2)= &apos;05&apos;,
MID( TEXT(CSC_OTC__c) , 0, 2)= &apos;02&apos;),
&apos;Wrty&amp;Contr&apos;,
&apos;Non Wrty&amp;Contr&apos;)</formula>
        <label>Case OTC Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_Owner_Emp_Type__c</fullName>
        <formula>TEXT( Owner:User.CSC_Report_Emp_Type__c )</formula>
        <label>Case Owner Emp Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_Owner_EmployeeId__c</fullName>
        <formula>Owner:User.Employee_ID__c</formula>
        <label>Case Owner EmployeeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_Owner_New_Role__c</fullName>
        <formula>TEXT( Owner:User.CSC_Report_New_Role__c )</formula>
        <label>Case Owner New Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_Owner_Primary_Role__c</fullName>
        <formula>TEXT( Owner:User.CSC_Report_Primary_Role__c )</formula>
        <label>Case Owner Primary Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_Owner_Secondary_Role__c</fullName>
        <formula>TEXT( Owner:User.CSC_Report_Secondary_Role__c )</formula>
        <label>Case Owner Secondary Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_Owner_Team__c</fullName>
        <formula>Owner:User.CSC_Report_Team__c</formula>
        <label>Case Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_To_CA_Q_Time__c</fullName>
        <label>Case To CA Q Time</label>
        <summarizedField>Case_Owner__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Case_Owner__c.Last_QueueName__c</field>
            <operation>contains</operation>
            <value>CA</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Owner__c.Case__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_Type_Hw_Sw__c</fullName>
        <formula>CASE(CSC_Case_Type__c , &quot;DEF&quot;,&quot;Other&quot;,
&quot;Administrative&quot;,&quot;Other&quot;,
&quot;Complnt Mgt/Cust Rel&quot;,&quot;Other&quot;,
&quot;Configuration&quot;,&quot;SW&quot;,
&quot;Document Request&quot;,&quot;Other&quot;,
&quot;Electronic&quot;,&quot;Other&quot;,
&quot;Environmental&quot;,&quot;Other&quot;,
&quot;Feedback&quot;,&quot;Other&quot;,
&quot;HW Delivery&quot;,&quot;HW&quot;,
&quot;Install&quot;,&quot;HW&quot;,
&quot;Marketing/Prod Info&quot;,&quot;Other&quot;,
&quot;MC BCS&quot;,&quot;Other&quot;,
&quot;MC Non-BCS&quot;,&quot;Other&quot;,
&quot;Misrouted Call&quot;,&quot;Other&quot;,
&quot;New Service/Consult&quot;,&quot;Other&quot;,
&quot;Performance Tune/Chk&quot;,&quot;SW&quot;,
&quot;Proactive&quot;,&quot;Other&quot;,
&quot;Questions&quot;,&quot;Other&quot;,
&quot;SW Delivery&quot;,&quot;SW&quot;,
&quot;CE Assist&quot;,&quot;HW&quot;,
&quot;Please Specify&quot;,&quot;Other&quot;,
&quot;Depot Repair&quot;,&quot;HW&quot;,
&quot;ECAG Case (Fax)&quot;,&quot;Other&quot;,
&quot;ECAG Case (Letter)&quot;,&quot;Other&quot;,
&quot;ECAG Case (Phone)&quot;,&quot;Other&quot;,
&quot;ECAG Case (Email)&quot;,&quot;Other&quot;,
&quot;T&amp;M&quot;,&quot;Other&quot;,
&quot;Problem&quot;,&quot;Other&quot;,
&quot;Question&quot;,&quot;Other&quot;,
&quot;MC HW&quot;,&quot;HW&quot;,
&quot;MC SW&quot;,&quot;SW&quot;,
&quot;MC CTR&quot;,&quot;HW&quot;,
&quot;CTR&quot;,&quot;HW&quot;,
&quot;FW&quot;,&quot;TBC&quot;,
&quot;&quot;)</formula>
        <label>Case Type Hw Sw</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_With_Parts_Used__c</fullName>
        <formula>IF(Total_Parts_Used__c &gt;= 1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case With Parts Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Case_owner_manager__c</fullName>
        <formula>Owner:User.Manager.LastName +  Owner:User.Manager.FirstName</formula>
        <label>Case owner manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Closer_EmployId__c</fullName>
        <formula>CSC_Closer__r.Employee_ID__c</formula>
        <label>Closer EmployId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Closer_Loginname__c</fullName>
        <formula>CSC_Closer__r.Username</formula>
        <label>Closer Loginname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Closer_Workgroup__c</fullName>
        <label>Closer Workgroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Contact_Email2__c</fullName>
        <formula>CSC_Additional_Contact__r.Email</formula>
        <label>Contact Email2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Contact_Email__c</fullName>
        <formula>Contact.Email</formula>
        <label>Contact Email1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Contact_Phone__c</fullName>
        <formula>Contact.Phone</formula>
        <label>Case Contact Phone1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Create_to_CA_Assign_Time__c</fullName>
        <formula>(CSC_Report_CA_Assign_Time__c - CreatedDate )*24*60</formula>
        <label>Create to CA Assign Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Creater_Level1_Manager__c</fullName>
        <formula>CreatedBy.Manager.LastName +  CreatedBy.Manager.FirstName</formula>
        <label>Creater Level1 Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Creater_Level2_Manager__c</fullName>
        <label>Creater Level2 Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Creater_Loginname__c</fullName>
        <formula>CreatedBy.Username</formula>
        <label>Creater Loginname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Creater_Workgroup__c</fullName>
        <label>Creater Workgroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_DBD_Time__c</fullName>
        <label>DBD Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_DISPATCH_COUNT__c</fullName>
        <label>DISPATCH COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_DP_Dispatch_CE_Dt_Latest__c</fullName>
        <label>DP Dispatch CE Dt Latest</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_DP_OwnerNum__c</fullName>
        <label>DP OwnerNum</label>
        <summarizedField>Case_Owner__c.CSC_Report_Weight__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Owner__c.CSC_Report_Old_CaseOwner_Role__c</field>
            <operation>equals</operation>
            <value>Dispatcher(L0)</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Owner__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Dispatch_TAT_Mins__c</fullName>
        <formula>(CSC_Report_Actual_EO_Dispatch_Local_Time__c - CSC_Report_Actual_End_Of_DBD__c )*24*60 + 
VALUE(MID(TEXT(CSC_Report_Actual_EO_Dispatch_Local_Time__c ),12,2)) - VALUE(MID(TEXT(CSC_Report_Actual_End_Of_DBD__c ),12,2))*60 + 
( VALUE(MID(TEXT(CSC_Report_Actual_EO_Dispatch_Local_Time__c ),15,2)) - VALUE(MID(TEXT(CSC_Report_Actual_End_Of_DBD__c ),15,2)))</formula>
        <label>Dispatch TAT Mins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Dispatch_TAT_Missed_By_Mins__c</fullName>
        <formula>IF((CSC_Report_Actual_EO_Dispatch_Local_Time__c - CSC_Report_Dispatch_TAT_Target_End_Time__c )*24*60 + 
VALUE(MID(TEXT(CSC_Report_Actual_EO_Dispatch_Local_Time__c ),12,2)) - VALUE(MID(TEXT(CSC_Report_Dispatch_TAT_Target_End_Time__c  ),12,2))*60 + 
( VALUE(MID(TEXT(CSC_Report_Actual_EO_Dispatch_Local_Time__c ),15,2)) - VALUE(MID(TEXT(CSC_Report_Dispatch_TAT_Target_End_Time__c ),15,2))) &gt; 0,

(CSC_Report_Actual_EO_Dispatch_Local_Time__c - CSC_Report_Dispatch_TAT_Target_End_Time__c )*24*60 + 
VALUE(MID(TEXT(CSC_Report_Actual_EO_Dispatch_Local_Time__c ),12,2)) - VALUE(MID(TEXT(CSC_Report_Dispatch_TAT_Target_End_Time__c  ),12,2))*60 + 
( VALUE(MID(TEXT(CSC_Report_Actual_EO_Dispatch_Local_Time__c ),15,2)) - VALUE(MID(TEXT(CSC_Report_Dispatch_TAT_Target_End_Time__c ),15,2))),

0)</formula>
        <label>Dispatch TAT Missed By Mins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Dispatch_TAT_Target_End_Time__c</fullName>
        <formula>IF(CSC_Report_SLA__c = &quot;CTR&quot;, CSC_Report_Actual_End_Of_DBD__c + 1/96 , 
IF( CONTAINS(CSC_Report_SLA__c , &quot;SBD&quot;) , CSC_Report_Actual_End_Of_DBD__c + 1/48, 
IF(CONTAINS(CSC_Report_SLA__c , &quot;NBD&quot;), CSC_Report_Actual_End_Of_DBD__c + 1/16, null) ) )</formula>
        <label>Dispatch TAT Target End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Dispatch_TAT_Threshold__c</fullName>
        <formula>IF(CSC_Report_SLA__c = &quot;CTR&quot;, 15 , 
IF( CONTAINS(CSC_Report_SLA__c , &quot;SBD&quot;) , 30, 
IF(CONTAINS(CSC_Report_SLA__c , &quot;NBD&quot;), 90, null) ) )</formula>
        <label>Dispatch TAT Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_EMPLOYEE_OWNER__c</fullName>
        <label>EMPLOYEE OWNER</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_ETE_End_Date_to_Open_Date_1__c</fullName>
        <label>ETE_End Date to Open Date 1</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Elevated__c</fullName>
        <label>Elevated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Elevated_c__c</fullName>
        <label>Elevated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Entitlement_Status__c</fullName>
        <formula>Entitlement.Entitlement_Status__c</formula>
        <label>Entitlement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Entitlement_Type__c</fullName>
        <formula>Entitlement.Entitlement_Type__c</formula>
        <label>Entitlement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Field_Reqted_Parts_Used_For_C__c</fullName>
        <label>List Of Field Requested Parts Used</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Firs_Part_Recommendor_Workgro__c</fullName>
        <label>First Part Recommendor Workgroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_First_GSC_Dispatch_Date__c</fullName>
        <label>First GSC Dispatch Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_GSCTAT_Mins__c</fullName>
        <formula>IF(( CSC_Report_Actual_EO_Dispatch_Local_Time__c -  CSC_Report_Target_GSC_End_Time__c )*24*60 + 
VALUE(MID(TEXT(CSC_Report_Actual_EO_Dispatch_Local_Time__c ),12,2)) - VALUE(MID(TEXT(CSC_Report_Target_GSC_End_Time__c ),12,2))*60 + 
( VALUE(MID(TEXT(CSC_Report_Actual_EO_Dispatch_Local_Time__c ),15,2)) - VALUE(MID(TEXT(CSC_Report_Target_GSC_End_Time__c ),15,2)))&gt;0, 

(CSC_Report_Actual_EO_Dispatch_Local_Time__c - CSC_Report_Target_GSC_End_Time__c )*24*60 + 
VALUE(MID(TEXT(CSC_Report_Actual_EO_Dispatch_Local_Time__c ),12,2)) - VALUE(MID(TEXT(CSC_Report_Target_GSC_End_Time__c ),12,2))*60 + 
( VALUE(MID(TEXT(CSC_Report_Actual_EO_Dispatch_Local_Time__c ),15,2)) - VALUE(MID(TEXT(CSC_Report_Target_GSC_End_Time__c ),15,2))), 

0)</formula>
        <label>GSCTAT Mins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_GSC_Dispatch_Date__c</fullName>
        <label>GSC Dispatch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_GSC_Recmd_Parts_For_Case__c</fullName>
        <label>List Of GSC Recommended Parts For Case</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Report_I04A_Case__c</fullName>
        <label>I04A Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_I04A_Missed__c</fullName>
        <label>I04A Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_I05A_Case__c</fullName>
        <formula>IF( OR( CSC_Report_Service_Flag__c = &apos;Same Day&apos;,
CSC_Report_Service_Flag__c = &apos;Next Day&apos;,
CSC_Report_Service_Flag__c = &apos;Other&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I05A Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_I05A_Missed__c</fullName>
        <label>I05A Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_I05D_Case__c</fullName>
        <formula>IF(CSC_Report_Service_Flag__c = &apos;CTR&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I05D Case(Deleted)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_I05D_Case_new__c</fullName>
        <label>I05D Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_I05D_Missed__c</fullName>
        <label>I05D Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_I06A_Case__c</fullName>
        <label>I06A Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_I06A_Missed__c</fullName>
        <label>I06A Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_I06F_Case__c</fullName>
        <label>I06F Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_I06F_Missed__c</fullName>
        <label>I06F Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Is_L1__c</fullName>
        <formula>IF( CSC_Report_X_Elevation_Level__c = &quot;Green&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is L1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Is_L2__c</fullName>
        <formula>IF( CSC_Report_X_Elevation_Level__c = &quot;Yellow&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is L2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Is_L3__c</fullName>
        <formula>IF( CSC_Report_X_Elevation_Level__c = &quot;Red&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is L3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_LA_DATE_GMT__c</fullName>
        <label>LA DATE GMT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Last_Activity_Period__c</fullName>
        <formula>if( IsClosed ,0,(Now() - LastModifiedDate ))</formula>
        <label>Last Activity Elapsed Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Level_2_Manager__c</fullName>
        <label>Level 2 Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Logging_And_DBD_TAT_Mins__c</fullName>
        <formula>(CSC_Report_Actual_End_Of_DBD__c - CreatedDate )*24*60 + 
VALUE(MID(TEXT(CSC_Report_Actual_End_Of_DBD__c ),12,2)) - VALUE(MID(TEXT(CreatedDate ),12,2))*60 + 
( VALUE(MID(TEXT(CSC_Report_Actual_End_Of_DBD__c ),15,2)) - VALUE(MID(TEXT(CreatedDate ),15,2)))</formula>
        <label>Logging And DBD TAT Mins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_LtzFirst_Onsite_OpenDate__c</fullName>
        <label>Ltz First Onsite Workorder Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_NUMBER_OWNERS__c</fullName>
        <label>NUMBER OWNERS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_OWNER_email__c</fullName>
        <formula>Owner:User.HPE_Email__c</formula>
        <label>Case Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Onsite_Resolution_Time_Case__c</fullName>
        <label>Onsite Resolution Time Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Onsite_Resolution_Time_Missed__c</fullName>
        <label>Onsite Resolution Time Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Onsite_Resolution_Time_Net__c</fullName>
        <label>Onsite Resolution Time Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Onsite_Response_Time_Case__c</fullName>
        <label>Onsite Response Time Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Onsite_Response_Time_Missed__c</fullName>
        <label>Onsite Response Time Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Onsite_Subcases__c</fullName>
        <label>Onsite Workorder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Outstanding_Period__c</fullName>
        <formula>TODAY() -  DATEVALUE( CreatedDate )</formula>
        <label>Outstanding Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Owner_City__c</fullName>
        <formula>TEXT(Owner:User.CSC_Report_City__c)</formula>
        <label>Owner City</label>
        <type>Text</type>
    </fields>
</CustomObject>